--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,40 +8,24 @@ body {
 }
 
 .calculator {
-    border-radius: 5px;
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+    border: 10px solid #ccc;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: white;
 }
 
-.calculator-screen {
+#result {
     width: 100%;
-    height: 80px;
-    border: none;
-    background-color: #252525;
-    color: white;
+    height: 40px;
+    margin-bottom: 10px;
     text-align: right;
-    padding-right: 20px;
-    padding-left: 10px;
-    font-size: 2.5rem;
 }
 
-button {
-    height: 60px;
-    font-size: 1.5rem;
-}
-
-.operator {
-    background-color: #f9a825;
-}
-
-.equal-sign {
-    background-color: #4caf50;
-    height: 100%;
-    grid-area: 2 / 4 / 6 / 5;
-}
-
-.calculator-keys {
+.buttons {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    padding: 20px;
+}
+
+.button {
+    padding: 20px;
 }
